# subxt-scale-ink

./: Cargo.toml  README.md
common/: Cargo.toml  lib.rs
contract/: Cargo.toml  lib.rs
web/: Cargo.toml
web/src/: main.rs
