[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = "3.4.0"
# subxt = { version = "0.28.0", default-features = false, features = ["jsonrpsee-web"] }
# subxt = { version = "0.28.0", default-features = false, features = ["jsonrpsee-ws"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
common = { path = "../common", default-features = false }

[features]
default = ["std"]
std = [
    "common/std",
]
